[package]
name = "quota-control"
version = "0.1.0"
authors = ["Cobalt <Chaosthe0rie@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ansi_term = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
regex = "1.3.9"
users = "0.10.0"
tui = { version = "0.11.0", features = ["termion"], default-features = false }
termion = "1.5.5"
csv = "1.1.3"
